# aal_commander

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  aal_test.cpp  history.txt  main.cpp  notes.txt
commander/: CMakeLists.txt  README.md  command.cpp  command.h  command_registry.cpp  command_registry.h  commands.cpp  commands.h  hints.cpp  hints.h  linenoise.c  linenoise.h  parsed_line.cpp  parsed_line.h  view_state.cpp  view_state.h
commander/impl/: cd_command.cpp  cd_command.h  dir_command.h  exit_command.cpp  exit_command.h  ls_command.cpp  ls_command.h  pwd_command.cpp  pwd_command.h
tests/: dummy_command.h  test_cd_command.cpp  test_command_registry.cpp  test_commands.cpp  test_directory.cpp  test_directory.h  test_hints.cpp  test_ls_command.cpp  test_parsed_line.cpp  test_utils.cpp  test_utils.h  test_view_state.cpp
